[package]
name = "ranityeth_lib"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "ranityeth"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
secp256k1 = { version="0.22.1", features=["rand"]}
tiny-keccak = {version = "2.0.2", features = ["sha3","keccak"]}
rlp = "0.5.1"
hex = "0.4.3"
clap = { version = "3.2.5", features = ["derive"] }
